<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern"
    tools:context="com.example.lexel.moneytracker.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <LinearLayout

        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        >
        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/price"
            android:gravity="end"
            android:inputType="number"
            android:hint="@string/price_hint"
            android:maxLines="1"
            android:layout_width="@dimen/main_width"
            android:layout_height="wrap_content" />

        <ImageButton
            android:contentDescription="@string/plus_string"
            android:id="@+id/add"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </android.support.v7.widget.CardView>



</android.support.design.widget.CoordinatorLayout>